--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel='stylesheet' href='styles/topnav.css'>
     </head>
 
-    <body onload='init()'>
+    <body onload='init()' onvolumechange='init()'>
 
         <div class='topnav'>
             <button class='navbutton' onclick='constructArray()'>New list</button>
